--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,105 @@
 <div class="padding"></div>
 <div class="padding"></div>
 
-<!--Resume Start-->     
+<!--Resume Start-->
+
+  <!--Resume Heading Start-->
+<div class="container">
+  <div class="header">
+    <header>
+      <div class="name-title">EVAN R. HINDES</div>
+      <p>evan.hindes@wustl.edu // 908.377.9110<br>Current Address // 6805 Washington Ave, 1E // St. Louis, MO 63130<br>Permanent Address // 19 Azalea Trail // Westfield, NJ 07090</p>
+    </header>
+  <!--Resume Heading End-->
+
+  <div class="padding"></div>
+
+
+  <!--Resume Education Start-->
+  <div class="education">
+    <div class="second-header">EDUCATION</div>
+      <div class="job-header">WASHINGTON UNIVERSITY IN ST. LOUIS, OLIN BUSINESS SCHOOL // St. Louis, MO<br>Bachelor of Science in Business Administration<br>Majors // Marketing and International Business, Minor // Spanish<br>May 2015</div>
+          <ul>
+            <li>Overall GPA: 3.63/4.00</li>
+            <li>Dean's List</li>
+          </ul>
+        
+      <div class="job-header">STUDY ABROAD, UNIVERSIDAD CARLOS III DE MADRID // Madrid, Spain<br>May 2014</div>
+          <ul>
+            <li>Study Abroad coursework in international business, the European Union, and Spanish language, culture and history</li>
+          </ul>
+  </div>
+  <!--Resume Education End-->
+
+  <div class="padding"></div>
+
+  <!--Resume Experience Start-->
+  <div class="experience">
+    <div class="second-header">EXPERIENCE</div>
+      <div class="job-header">THE CHILDREN'S PLACE (TCP) // Secaucus, NJ<br><i>International Intern</i><br>June 2014-August 2014</div>
+          <ul>
+            <li>Analyzed TCP's and global competitors' pricing information to create a template amongst international franchise partners to assess positioning in the Middle Eastern marketplace</li>
+            <li>Evaluated Middle Eastern franchise sales during Ramadan, in relation to top sellers, division contribution, merchandise assortment, displays and marketing, to provide hindsight recommendations for improvement during the 2015 holiday season</li>
+            <li>Assisted the international merchandisers in creating a Style Library Tool for franchise partners to access styles from recent buys and in reviewing merchandise for spring and summer 2015 buys</li>
+            <li>Developed a comprehensive business plan for TCP's entry into an international e-commerce marketplace in conjuction with the 2014 intern class for presentation to the senior leadership team</li>
+            <li>Enhanced retail industry knowledge by participating in intern training sessions hosted by senior management in key departments</li>
+          </ul>
+
+
+    <div class="job-header">OLIN BUSINESS SCHOOL, WASHINGTON UNIVERSITY // St. Louis, MO<br><i>Teaching Assistant, Quantiative Business Analysis 120: Managerial Statistics I</i><br>September 2013-December 2013, September 2014-Present</div>
+          <ul>
+            <li>Proctor and grade students' quizzes and exams to support the professor and to uphold the university's honor code of academic integrity</li>
+            <li>Coordinate logistics for end-of-semester projects in order to organize student groups, preliminary research, peer evaluations and feedback</li>
+          </ul>
+
+    <div class="job-header">INSPIRESTL - SKANDALARIS INTERNSHIP PROGRAM // St. Louis, MO<br><i>inspireSTL is a non-profit dedicated to educating and empowering the future leaders of St. Louis through access to college-prep schooling.<br>Development and Marketing Summer Intern</i><br>June 2013-August 2013</div>
+          <ul>
+            <li>Researched and organized grant opportunities, corporate and individual private donors, partnership organizations, and fundraising resources to create an extensive and diverse network of potential grantees and partners</li>
+            <li>Created a development and marketing vision for the 2013-2014 fiscal year to provide a succint strategy to raise education awareness, establish brand recognition, promote recruitment of scholars, and expand fundraising efforts</li>
+            <li>Developed orientation and meeting schedules and professional development plans to create a smooth transition for onboarding new employees to increase their understanding of the organization and to improve teamwork skills</li>
+            <li>Strengthened entrepreneurial skills by attending speaker panels, company visits, and tours of the St. Louis neighborhoods and local startup communities, hosted by the Skandalaris Center for Entrepreneurial Studies</li>
+          </ul>
+
+    <div class="job-header">HOMEBRIDGE FINANCIAL SERVICES, INC. (FORMERLY REMN) // Edison, NJ<br><i>Accounting Intern</i><br>May 2012-August 2012</div>
+          <ul>
+            <li>Entered billing information into proprietary databases for HomeBridge's in-house appraisal company to record payment of appraisers</li>
+            <li>Updated and created templates for job descriptions for the Human Resources Department to utilize for future hiring purposes</li>
+            <li>Analyzed financial data using Pivot Tables to examine the distribution of company mortgages to provide a summary to potential investors</li>
+          </ul>
+  </div>
+  <!--Resume Experience End-->
+  
+  <div class="padding"></div>
+
+  <!--Resume Activities Start-->
+  <div class="activities-and-leadership">
+    <div class="second-header">AWARDS, ACTIVITIES AND LEADERSHIP</div>
+          <ul>
+            <li><i>YMA FSF Scholarship Award Winner</i> - The YMA Fashion Scholarship Fund, 2015</li>
+            <li><i>Student Worker Office Assistant</i> - Weston Career center, Olin Business School, Fall 2011-Fall 2013, Fall 2014-Present</li>
+            <li><i>VP Human Resources</i> - Alpha Kappa Psi Professional Business Fraternity, Alpha Lambda Chapter, Fall 2012-Fall 2013, Fall 2014-Present
+              <br>
+              <ul><li>All-AKPsi Academic Team 2013-2014 and 2014-2015</li></ul></li>
+            <li><i>Member</i> - Alpha Omicron Pi Women's Fraternity, Delta Kappa Chapter, Spring 2012-Fall 2013, Fall 2014-Present</li>
+            <li><i>Gamma Chi</i> - Women's Sorority Recruitment 2015, Women's Panhellenic Association, Fall 2014-Present</li>
+            <li><i>Board Member</i> - Greek Standards Board, Interfraternity Council and Women's Panhellenic Association, Spring 2013-Fall 2013</li>
+            <li><i>Program Leader</i> - PALs (Promoting Active Lifestyles), Washington University in St. Louis Campus Y, Fall 2011-Fall 2013</li>
+            <li><i>Internal Operations</i> - International Business Association, Olin Business School, Fall 2013</li>
+          </ul>
+  </div>
+  <!--Resume Activities End-->
+
+  <div class="padding"></div>
+
+  <!--Resume Skills Start-->
+  <div class="skills">
+    <div class="second-header">SKILLS</div>
+          <ul>
+            <li>Computer Skills: Proficient in Microsoft Office Suite</li>
+            <li>Language Skills: Conversational Spanish</li>
+          </ul>
+  </div> 
+  <!--Resume Skills End-->  
 
 <!--Resume End-->
 
@@ -52,7 +150,7 @@
         <ol class="breadcrumb">
 
           <li><div class="bar-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                <a href="mailto:evan.hindes@yahoo.com?subject=Hello!" target="_top">  EMAIL</a></li>
+                <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">  EMAIL</a></li>
 
           <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
                 <a href="#">  PHONE</a></li>
