--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <ol class="breadcrumb">
 
           <li><div class="bar-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                <a href="mailto:evan.hindes@yahoo.com?subject=Hello!" target="_top">  EMAIL</a></li>
+                <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">  EMAIL</a></li>
 
           <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
                 <a href="#">  PHONE</a></li>
