--- a/index.html
+++ b/index.html
@@ -110,7 +110,21 @@
                 <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
 
           <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                <a href="#">     PHONE</a></li>
+                <a href="#phone" data-toggle="modal" data-target="#myModal">     PHONE</a></li>
+
+                  <!--Phone Modal Start-->
+                    <a id="phone"></a>
+                      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                              <h4 class="modal-title" id="myModalLabel">(908) 377-9110</h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                  <!--Phone Modal End-->
 
           <li><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
                 <a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
@@ -119,10 +133,45 @@
                 <a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
 
           <li><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-                <a href="#">     PURCHASE PRINTS</a></li>
+                <a href="#purchaseprints" data-toggle="modal" data-target="#myModal2">     PURCHASE PRINTS</a></li>
+
+                  <!--Purchase Prints Modal Start-->
+                    <a id="purchaseprints"></a>
+                      <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                              <h4 class="modal-title" id="myModalLabel2">Purchase Prints</h4><p class="modal-number"></p>
+                            </div>
+                            <div class="modal-body">
+                              <iframe src="https://docs.google.com/forms/d/1pWUtU77Zm3e69mbZfwk15XN1SBQptPu2ropBeel_SdQ/viewform?embedded=true" width="550" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                  <!--Purchase Prints Modal End-->
 
           <li><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                <a href="#">     BOOKINGS</a></li>
+                <a href="#bookings" data-toggle="modal" data-target="#myModal3">     BOOKINGS</a></li>
+
+                  <!--Bookings Modal Start-->
+                    <a id="bookings"></a>
+                      <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                              <h4 class="modal-title" id="myModalLabel2">Bookings</h4><p class="modal-number">Take a look at our calendar below for available dates. Send us an email at <a href="mailto:erhindes@gmail.com?subject=Booking" target="_top">erhindes@gmail.com</a> to schedule a booking. Include your dates of preference and a description of your event.</p>
+                            </div>
+                            <div class="modal-body">
+                              <iframe src="https://www.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="550" height="400" frameborder="0" scrolling="no"></iframe>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                  <!--Bookings Modal End-->
+
         </ol>
       </div>
 
