--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="Morocco"></div>
 
     <div class="col-sm-6 col-md-4">
-        <img src="Spain"></div>
+        <img src="desktop/img_0425.jpg" alt="Granada" width="300" height="250"></div>
 
     <div class="col-sm-6 col-md-4">
         <img src="Italy"></div>
