--- a/about.html
+++ b/about.html
@@ -42,8 +42,9 @@
 <!--About Start-->     
 
 <div class="container">
-    <h1>About</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet mauris nec lectus ullamcorper pharetra vitae vel nibh. Fusce ac sem a ex ullamcorper rhoncus eu nec magna. Etiam condimentum, dui at luctus fringilla, risus ligula lobortis augue, id iaculis enim leo in libero. Nulla sed tempus turpis, suscipit elementum augue. Vestibulum vel vulputate eros. Suspendisse tempus commodo pellentesque. Sed aliquam in velit nec efficitur. Integer suscipit, lectus vitae dignissim tristique, mi nunc pulvinar augue, vitae condimentum metus odio nec arcu. Integer sem nisi, vulputate vel consectetur vel, fermentum vitae diam. Nam rhoncus nisl id risus mollis aliquet. Sed non justo ut dui gravida consequat. Vestibulum sit amet dolor fermentum, blandit augue congue, aliquet magna. Maecenas mi justo, rutrum quis tincidunt vitae, lacinia ut urna.</p>
+  <h1>About</h1>
+    <p>Evan Hindes is a student at Washington University in St. Louis with a passion for landscape photography. During her five months abroad in Madrid, Spain, she.... daidka;kdakd;kfdk;as;dkkdf;a; dka;dkladflka;fkd fjdka;d;lfkj;akdjf; d kda;d;fjak;dfjd;sa kda;meuiqpeifnand kd;ajfkda fjdka;fjd;a fjka;fjd ak ;akdjfdlakjf jfdka; jd ka;fj a jkda;fja; fkdj;f dka;fj;af a;djkfa;f.</p>
+    <p><b>Book Evan for your next event!</b> djkadjla;f jfkda;dkfja ; fjkda;f dlaj fj dkaj;fldjka f jkd;afjalk fkda;f jkda;f jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda.</p>
 </div>
 <!--About End-->
 
@@ -114,7 +115,7 @@
                               <h4 class="modal-title" id="myModalLabel2">Bookings</h4><p class="modal-number">Take a look at our calendar below for available dates. Send us an email at <a href="mailto:erhindes@gmail.com?subject=Booking" target="_top">erhindes@gmail.com</a> to schedule a booking. Include your dates of preference and a description of your event.</p>
                             </div>
                             <div class="modal-body">
-                              <iframe src="https://www.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="550" height="400" frameborder="0" scrolling="no"></iframe>
+                              <iframe src="https://www.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="550" height="400" frameborder="0" scrolling="no"></iframe>
                             </div>
                           </div>
                         </div>
@@ -123,7 +124,6 @@
 
         </ol>
       </div>
-
 <!--Bottom Border End-->
 
 
