--- a/index.html
+++ b/index.html
@@ -44,55 +44,134 @@
 
   <!--ROW 1 Start-->
   <div class="row">
-    <div class="col-sm-6 col-md-4">
-        <img src="Morocco"></div>
+    <!--Morocco Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/i5DqbhO.jpg" alt="Morocco" class="img-responsive">
+      </div>
+    </div>
+    <!--Morocco End-->
 
-    <div class="col-sm-6 col-md-4">
-        <img src="desktop/img_0425.jpg" alt="Granada" width="300" height="250"></div>
+    <!--Spain Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/26T4MJ7.jpg" alt="Spain" class="img-responsive">
+      </div>
+    </div>
+    <!--Spain End-->
 
-    <div class="col-sm-6 col-md-4">
-        <img src="Italy"></div>
+    <!--Italy Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/JTjsWQN.jpg" alt="Italy" class="img-responsive">
+      </div>
+    </div>
+    <!--Italy End-->
+
+    <!--Greece Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/KMVkVrg.jpg" alt="Greece" class="img-responsive">
+      </div>
+    </div>
+    <!--Greece End-->
+
   </div>
   <!--ROW 1 END-->
 
   <!--ROW 2 Start-->
   <div class="row">
-    <div class="col-sm-6 col-md-4">
-        <img src="France"></div>
+    <!--France Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/9rgVfhp.jpg" alt="France" alt="img-responsive">
+      </div>
+    </div>
+    <!--France End-->
 
-    <div class="col-sm-6 col-md-4">
-        <img src="England"></div>
+    <!--Belgium Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/JMNpxkP.jpg" alt="Belgium" class="img-responsive">
+      </div>
+    </div>
+    <!--Belgium End-->
 
-    <div class="col-sm-6 col-md-4">
-        <img src="Ireland"></div>
+    <!--England Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/1GBCXfr.jpg" alt="Englad" class="img-responsive">
+      </div>
+    </div>
+    <!--England End-->
+
+    <!--Ireland Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/GT7aA3q.jpg" alt="Ireland" class="img-responsive">
+      </div>
+    </div>
+    <!--Ireland End-->
   </div>
   <!--ROW 2 END-->
 
   <!--ROW 3 Start-->
   <div class="row">
-    <div class="col-sm-6 col-md-4">
-        <img src="Belgium"></div>
+    <!--Switzerland Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <!-- Link trigger modal -->
+          <a href="#switzerland" data-toggle="modal" data-target="#myModal"><img src="http://i.imgur.com/JzZDFBZ.jpg" alt="Switzerland" class="img-responsive"></a>
 
-    <div class="col-sm-6 col-md-4">
-        <img src="Switzerland"></div>
+        <!-- Link trigger modal -->
 
-    <div class="col-sm-6 col-md-4">
-        <img src="Greece"></div>
+        <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Switzerland</h4>
+                </div>
+                  <div class="modal-body">...
+                  </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- Modal -->
+      </div>
+    </div>
+    <!--Switzerland End-->
+
+    <!--Germany Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/KwjzySp.jpg" alt="Germany" class="img-responsive">
+      </div>
+    </div>
+    <!--Germany End-->
+
+    <!--Austria Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/02e3SO2.jpg" alt="Austria" class="img-responsive">
+      </div>
+    </div>
+    <!--Austria End-->
+
+    <!--Czech Republic Start-->
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/C8vG65h.jpg" alt="Czech Republic" class="img-responsive">
+      </div>
+    </div>
+    <!--Czech Republic End-->
   </div>
   <!--ROW 3 END-->
-
-  <!--ROW 4 Start-->
-  <div class="row">
-    <div class="col-sm-6 col-md-4">
-        <img src="Germany"></div>
-
-    <div class="col-sm-6 col-md-4">
-        <img src="Austria"></div>
-
-    <div class="col-sm-6 col-md-4">
-        <img src="Czech Republic"></div>
-  </div>
-  <!--ROW 4 END-->
 
 </div>
 
@@ -165,7 +244,7 @@
                               <h4 class="modal-title" id="myModalLabel2">Bookings</h4><p class="modal-number">Take a look at our calendar below for available dates. Send us an email at <a href="mailto:erhindes@gmail.com?subject=Booking" target="_top">erhindes@gmail.com</a> to schedule a booking. Include your dates of preference and a description of your event.</p>
                             </div>
                             <div class="modal-body">
-                              <iframe src="https://www.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="550" height="400" frameborder="0" scrolling="no"></iframe>
+                              <iframe src="https://www.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="550" height="400" frameborder="0" scrolling="no"></iframe>
                             </div>
                           </div>
                         </div>
@@ -174,7 +253,6 @@
 
         </ol>
       </div>
-
 <!--Bottom Border End-->
 
 
