--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
 <div class="container">
   <h1>About</h1>
-    <p>Evan Hindes is a student at Washington University in St. Louis with a passion for landscape photography. During her five months abroad in Madrid, Spain, she.... daidka;kdakd;kfdk;as;dkkdf;a; dka;dkladflka;fkd fjdka;d;lfkj;akdjf; d kda;d;fjak;dfjd;sa kda;meuiqpeifnand kd;ajfkda fjdka;fjd;a fjka;fjd ak ;akdjfdlakjf jfdka; jd ka;fj a jkda;fja; fkdj;f dka;fj;af a;djkfa;f.</p>
+    <p>Evan Hindes is a student at Washington University in St. Louis. She is in her last year of the Olin Business School with a concentration in Marketing and International Business....student at Washington University in St. Louis with a passion for landscape photography. During her five months abroad in Madrid, Spain, she.... daidka;kdakd;kfdk;as;dkkdf;a; dka;dkladflka;fkd fjdka;d;lfkj;akdjf; d kda;d;fjak;dfjd;sa kda;meuiqpeifnand kd;ajfkda fjdka;fjd;a fjka;fjd ak ;akdjfdlakjf jfdka; jd ka;fj a jkda;fja; fkdj;f dka;fj;af a;djkfa;f.</p>
     <p><b>Book Evan for your next event!</b> djkadjla;f jfkda;dkfja ; fjkda;f dlaj fj dkaj;fldjka f jkd;afjalk fkda;f jkda;f jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda jdks kfdieuqpiu  fjnmc;ifa jfkda;feiw  adklpq  fakcnx p adwpoai  dka ifeua n fdap fdna dk bpaud fk apdh akpda.</p>
 </div>
 <!--About End-->
