--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,8 @@
           <li><div class="bar-text"><a href="index.html">PHOTOGRAPHY</a></div></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="resume.html">RESUME</a></li>
+          <li><a href="prints.html">PRINTS</a></li>
+          <li><a href="bookings.html">BOOKINGS</a></li>
         </ol>
       </div>
 <!--Nav Bar End-->
@@ -145,7 +147,6 @@
 <div class="padding"></div>
                 
 <!--Bottom Border Start-->
-
       <div class="container">
         <ol class="breadcrumb">
 
@@ -174,46 +175,6 @@
 
           <li><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                 <a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
-
-          <li><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-                <a href="#purchaseprints" data-toggle="modal" data-target="#myModalPURCHASEPRINTS">     PURCHASE PRINTS</a></li>
-
-                  <!--Purchase Prints Modal Start-->
-                    <a id="purchaseprints"></a>
-                      <div class="modal fade" id="myModalPURCHASEPRINTS" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">Purchase Prints</h4><p class="modal-number"></p>
-                            </div>
-                            <div class="modal-body">
-                              <iframe src="https://docs.google.com/forms/d/1pWUtU77Zm3e69mbZfwk15XN1SBQptPu2ropBeel_SdQ/viewform?embedded=true" width="550" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Purchase Prints Modal End-->
-
-          <li><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                <a href="#bookings" data-toggle="modal" data-target="#myModalBOOKINGS">     BOOKINGS</a></li>
-
-                  <!--Bookings Modal Start-->
-                    <a id="bookings"></a>
-                      <div class="modal fade" id="myModalBOOKINGS" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">Bookings</h4><p class="modal-number">Take a look at our calendar below for available dates. Send us an email at <a href="mailto:erhindes@gmail.com?subject=Booking" target="_top">erhindes@gmail.com</a> to schedule a booking. Include your dates of preference and a description of your event.</p>
-                            </div>
-                            <div class="modal-body">
-                              <iframe src="https://www.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="550" height="400" frameborder="0" scrolling="no"></iframe>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Bookings Modal End-->
 
         </ol>
       </div>
